# embedded-proj

./: CMakeLists.txt  ReadMe.md  flash.sh  main.c  main.cpp
